[gd_scene load_steps=37 format=2]

[ext_resource path="res://Assets/Sprites/bucket.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/icon.png" type="Texture" id=4]
[ext_resource path="res://SFX/Sound_effects/Sound effects/Jump.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/Sound_effects/Sound effects/walking_without_the_Bucket.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/Sound_effects/Sound effects/toggleBucket.wav" type="AudioStream" id=7]
[ext_resource path="res://SFX/Sound_effects/Sound effects/death.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_202.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_201.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_02.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_00.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_200.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_03.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_04.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_203.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_05.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_205.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_204.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_10.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_08.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_11.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_12.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_13.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_09.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_210.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_213.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_208.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_212.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_211.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/SeperateSprites/sprite_209.png" type="Texture" id=31]
[ext_resource path="res://SFX/Sound_effects/Sound effects/Pick up Item.wav" type="AudioStream" id=32]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Bucket",
"speed": 0.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "1_Move",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 3 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "2_Move",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "1_Bocket",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "2_Bocket",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "1_Push",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 31 ), ExtResource( 26 ) ],
"loop": true,
"name": "2_Pull",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 29 ) ],
"loop": true,
"name": "2_Push",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 25 ), ExtResource( 20 ) ],
"loop": true,
"name": "1_Pull",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.6939, 32.1499 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 3 )
animation = "2_Pull"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Moving" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="ToggleBucket" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="PickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 32 )
volume_db = -20.0
